iac/kubernetes/net/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: e-sketch-gateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: istio
  addresses:
    - type: Hostname
      value: istio-ingressgateway.istio-system.svc.cluster.local
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "e-sketch.ru"
      tls:
        certificateRefs:
          - name: e-sketch-ru-tls
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
