iac/kubernetes/net/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: e-sketch
  namespace: e-sketch
spec:
  hosts:
    - "e-sketch.ru"
  gateways:
    - e-sketch-gateway
  http:
    - match:
        - uri:
            prefix: /preview
      route:
        - destination:
            host: est-preview
            port:
              number: 80
    - match:
        - uri:
            prefix: /proxy
      route:
        - destination:
            host: est-proxy
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: est-front
